--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  background-color: rgb(219, 219, 219);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,4 +13,57 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.title {
+  width: 300px;
+  margin: 0 auto;
+  color: green;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.label {
+  display: block;
+  margin-bottom: 30px;
+  line-height: 1.8;
+  color: green;
+}
+
+.input {
+  display: block;
+  margin-bottom: 15px;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.btn {
+  color: white;
+  background-color: green;
+  border-radius: 10px;
+}
+.btn[disabled] {
+  border: 1px solid rgba(16, 223, 126, 0.3);
+  background-color: greenyellow;
+}
+
+form > .btn {
+  width: 100%;
+}
+
+.container {
+  width: 300px;
+  margin: 0 auto;
+}
+
+.container.list {
+  padding: 0;
+}
+.contact {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact > p {
+  margin-right: 20px;
 }
